hphp/hack/test/typecheck/let/let_lambda_error.php.exp
File "let_lambda_error.php", line 10, characters 5-5:
Invalid argument (Typing[4110])
File "let_lambda_error.php", line 3, characters 24-29:
Expected string
File "let_lambda_error.php", line 6, characters 11-12:
But got int
